# weaver

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  TODO.md  docker-build.init  env.sh  err  my-cargo.sh
.cargo/: config
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
chrome-extension/: background.html  background.js  manifest.json
cli-data/: Cargo.toml
cli-data/src/: app.rs  cli.rs  main.rs
cli-server/: Cargo.toml
cli-server/src/: app.rs  cli.rs  main.rs
cli-shell/: Cargo.toml
cli-shell/src/: local_api.rs  main.rs
cli-shell/src/cli/: parse.rs
cli-shell/src/controllers/: app.rs  flows.rs  history.rs  mod.rs  shell_prompt.rs
cli-shell/src/display/: mod.rs
cli-shell/src/local_store/: epics.rs  json_store.rs  weaver.rs
docs/: Store.md
flows/: create_database.flow.json  install.flow.json
k8s/: .gitignore  README.md  configmap.yml  data-secret.yml  data-secret.yml.secret  rbac.yml  service.yml  statefulset.yml
lib-ai/: Cargo.toml
lib-ai/src/: compact.rs  lib.rs  normalize.rs  recommender.rs
lib-api/: Cargo.toml
lib-api/src/: filtered_vec.rs  lib.rs
lib-api/src/config/: content.rs  db.rs  environment.rs  file_utils.rs  mod.rs  server_config.rs
lib-api/src/config/net/: mod.rs
lib-api/src/entities/: epic.rs  flow.rs  mod.rs  new_action.rs  page_content.rs
lib-db/: Cargo.toml
lib-db/src/: lib.rs  store_policies.rs  test_helpers.rs  topics.rs
lib-db/src/backends/: mod.rs  schema.rs
lib-db/src/db/: actions2.rs  commands.rs  epics.rs  hosts.rs  locations.rs  mod.rs  pages.rs  url_policies.rs  url_restrictions.rs
lib-db/src/setup/: mod.rs
lib-error/: Cargo.toml
lib-error/src/: lib.rs
lib-export/: Cargo.toml
lib-export/src/: lib.rs
lib-goo/: Cargo.toml
lib-goo/src/: date.rs  filtered_vec.rs  lib.rs  normalize.rs
lib-goo/src/config/: db.rs  environment.rs  file_utils.rs  mod.rs  output_kind.rs  server_config.rs
lib-goo/src/config/net/: mod.rs
lib-goo/src/entities/: epic.rs  flow.rs  formatted_action.rs  lda.rs  mod.rs  new_action.rs  page_content.rs
lib-index/: Cargo.toml
lib-index/src/: config.rs  indexer.rs  lib.rs  repo.rs
lib-index/src/indexer/: mod.rs  tantivy_indexer.rs
lib-index/src/repo/: config.rs  encrypted_repo.rs  mod.rs
lib-rpc/: Cargo.toml
lib-rpc/src/: client.rs  lib.rs
lib-rpc/src/client/: rest.rs
lib-server/: Cargo.toml  README.md  build.rs
lib-server/src/: analyses.rs  app_state.rs  asset_map.rs  lib.rs  server.rs  state_holder.rs  template_engine.rs
lib-server/src/handlers/: action_api.rs  mod.rs  search_api.rs  static_assets.rs  summary.rs  system.rs  url.rs  url_policies.rs
lib-server/src/pages/: canned.rs  history.rs  mod.rs  search_form.rs  static_assets.rs  system.rs
lib-server/templates/: base.html  canned.raw  history.html  hud.html  inline.css  search-form.html  search-results.html
lib-server/web/: build.sh  package.json  webpack.config.js
lib-server/web/src/: index.js  weaver.scss
lib-tui/: Cargo.toml
lib-tui/src/: action_list_view.rs  lib.rs
migrations/2018-02-23-214600_create_actions/: down.sql  up.sql
migrations/2018-04-04-022406_version2/: down.sql  up.sql
migrations/2018-04-19-030734_add_action_host/: up.sql
migrations/2018-06-04-204635_add_url_restrictions/: up.sql
migrations/2018-07-29-153002_add_content_restrictions/: up.sql
migrations/2018-09-10-133455_actions_status_and_original/: up.sql
src/: lib.rs  local_api.rs  main.rs  schema.rs
src/cli/: build.rs  mod.rs  parse.rs
src/config/: file_utils.rs  mod.rs
src/controllers/: app.rs  data.rs  file_utils.rs  flows.rs  history.rs  mod.rs  server.rs  shell_prompt.rs  shell_proxy.rs  weaver.rs
src/display/: filter_processor.rs  formatted_action.rs  mod.rs  output_kind.rs  output_selector.rs  processor.rs  selection_processor.rs  table.rs  table_view.rs
src/entities/: epic.rs  flow.rs  milestone.rs  mod.rs  weaver.rs
src/http_server/: epic_handler.rs  mod.rs  store_middleware.rs  (+1 more)
weaver/: Cargo.toml  README.md
weaver-data/: Cargo.toml
weaver-data/src/: app.rs  cli.rs  main.rs
weaver-db/: Cargo.toml
weaver-db/src/: actions.rs  filtered_vec.rs  lib.rs  local_api.rs
weaver-db/src/backends/: json_store.rs  schema.rs
weaver-db/src/config/: file_utils.rs  mod.rs
weaver-db/src/config/net/: mod.rs
weaver-db/src/db/: actions2.rs  commands.rs  epics.rs  hosts.rs  locations.rs  mod.rs  url_policies.rs  url_restrictions.rs
weaver-db/src/entities/: flow.rs  formatted_action.rs  mod.rs  new_action.rs
weaver-db/src/setup/: mod.rs
weaver-error/: Cargo.toml
weaver-hud/: Cargo.toml
weaver-hud/src/: main.rs  tether_connector.rs  util.rs  web_view_connector.rs
weaver-index/: Cargo.toml
weaver-index/src/: config.rs  indexer.rs  lib.rs  repo.rs
weaver-rpc/: Cargo.toml  README.md  build.rs
weaver-rpc/src/: client.rs  lib.rs  server.rs
weaver-rpc/src/client/: mod.rs  rest.rs
weaver-rpc/src/proto/: actions.proto  mod.rs
weaver-rpc/src/server/: greeter.rs  historian.rs  mod.rs  server.rs
weaver-server/: Cargo.toml
weaver-server/src/: app.rs  cli.rs  main.rs
weaver-web/: Cargo.toml
weaver-web/src/: app_state.rs  lib.rs  server.rs
weaver-web/src/handlers/: action_api.rs  hello.rs  mod.rs  search_api.rs  search_form.rs  static_assets.rs  summary.rs  text_index.rs  url.rs  url_policies.rs  url_restrictions.rs
weaver-web/src/pages/: history.rs  mod.rs  search_form.rs
weaver-web/templates/: history.html  inline.css  search-form.html  search-results.html
weaver/src/: api.rs  local_api.rs  main.rs
weaver/src/cli/: build.rs  mod.rs  parse.rs
weaver/src/controllers/: app.rs  flows.rs  history.rs  mod.rs  shell_prompt.rs  shell_proxy.rs
weaver/src/display/: history_view.rs  main_screen.rs  mod.rs  output_selector.rs  processor.rs  recommend_view.rs  recommender.rs  table_view.rs
weaver/src/local_store/: epic.rs  epics.rs  json_store.rs  mod.rs  weaver.rs
weaver2py/: .gitignore  Cargo.toml  README.md  setup.py
weaver2py/src/: error.rs  lib.rs  repo.rs
weaver2py/weaver/: __init__.py
(+21 files in other folders)
