[package]
name = "weaver"
version = "0.3.3"
description = "Personal productivity tool allowing you to log and search through your command line and web history."
authors = ["Marius Seritan <git@winding-lines.com>"]

[workspace]
members = [
  "weaver-error",
  "weaver-rpc",
  "weaver-db",
  "weaver-index",
  "weaver-web",
  "cli-data",
  "cli-server",
  "cli-shell",
  "lib-api"
]

[dependencies]


