[package]
name = "weaver-project"
version = "0.3.4"
description = "Personal productivity tool allowing you to log and search through your command line and web history."
authors = ["Marius Seritan <git@winding-lines.com>"]

[workspace]
members = [
  "lib-goo",
  "lib-db",
  "lib-error",
  "lib-index",
  "lib-rpc",
  "lib-server",
  "weaver",
  "weaver-data",
  "weaver-server",
]

[dependencies]


