[package]
name = "weaver-project"
version = "0.3.4"
description = "Personal productivity tool allowing you to log and search through your command line and web history."
authors = ["Marius Seritan <git@winding-lines.com>"]

[workspace]
members = [
  "lib-ai",
  "lib-db",
  "lib-error",
  "lib-goo",
  "lib-index",
  "lib-rpc",
  "lib-server",
  "lib-tui",
  "weaver",
  "weaver-data",
  "weaver-server",
]
# The python extension is built using setup.py to support the ecosystem expectation and special linker builds.
exclude = ["weaver2py"]

[dependencies]


