[package]
name = "cli-data"
documentation = "Cli utility to replay the files in the document repo in order to regenerate the text index."
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver-data"
path = "src/main.rs"


[dependencies]
clap = "2.32"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

log = "0.4"
env_logger = "0.5"

weaver-index = {path="../weaver-index"}
weaver-db = {path="../weaver-db"}
weaver-error = {path="../weaver-error"}
lib-api = {path="../lib-api"}
