[package]
name = "cli-server"
documentation = "Start and host the weaver server"
version = "0.1.1"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver-server"
path = "src/main.rs"


[dependencies]
clap = "2.32"
hyper = "0.11"
futures = "0.1"
mime = "0.3"
daemonize = {git = "https://github.com/winding-lines/daemonize"}

log = "0.4"
env_logger = "0.5"

chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

weaver-index = {path="../weaver-index"}
weaver-db = {path="../weaver-db"}
weaver-web = {path="../weaver-web"}
weaver-error = {path="../weaver-error"}
lib-api = {path="../lib-api"}
