[package]
name = "lib-api"
documentation = "Holds information used to communicate between the different modules."
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]


[dependencies]
chrono = "0.4"
sys-info = "0.5"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"

lib-error = {path="../lib-error"}
