[package]
name = "lib-db"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
diesel = { version = "1.3", features = ["sqlite"] }
diesel_migrations = { version = "1.3" }
chrono = "*"
log = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1.0"

lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}
