[package]
name = "lib-db"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3", features = ["sqlite"] }
diesel_migrations = { version = "1.3" }
chrono = "*"
log = "*"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
regex = "1.0"

lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}
