[package]
name = "lib-error"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[dependencies]
diesel = "*"
sys-info = "*"
actix-web = "0.7"
reqwest = "0.8"
regex = "1.0"

[dependencies.failure]
version = "0.1"
features = ["backtrace"]

[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
rev = "e0cdd3114d05c927a349eb07a5daaf17360661ae"
features = ["mmap"]
