[package]
name = "lib-export"
version = "0.1.0"
description = "Export weaver functionality as a C library to be called from other languages"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
bincode = "1.0"
chrono = "0.4"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"

# Note that we depend on the workspace but we are not part of it.
# Instead use setup.py to support the ecosystem expectation and special linker builds.
lib-index = {path="../lib-index"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}