[package]
name = "lib-goo"
documentation = "Holds information used to communicate between the different modules."
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]


[dependencies]
chrono = "0.4"
libc = "0.2"
log = "0.4"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "0.5"

lib-error = {path="../lib-error"}
