[package]
name = "lib-index"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
# error-chain = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
rust_sodium = "~0.9.0"
keyring = "0.6.0"
metrohash = "1.0"
rpassword = "2.0"
log = "0.4"

lib-db = {path="../lib-db"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}


[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
rev = "2649c8a7158e6b8c504aa6b43e5af98da8d2c420"
features = ["mmap"]
