[package]
name = "lib-index"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
bincode = "1.0"
rust_sodium = "0.10.1"
keyring = "0.6.0"
metrohash = "1.0"
rpassword = "2.0"
log = "0.4"

lib-db = {path="../lib-db"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}


[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
rev = "279a9eb5e3ba2b18d8f3ab3a40caef9701f87927"
features = ["mmap"]
