[package]
name = "lib-rpc"
version = "0.1.0"
description = "Implement rpc between weaver client and server"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[dependencies]
log = "*"
reqwest = "0.9"
serde = {version = "*", features=["derive"]}
serde_json = "*"
serde_urlencoded = "0.5.1"

lib-error = {path = "../lib-error"}
lib-goo = {path = "../lib-goo"}

