[package]
name = "lib-server"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
actix-web = "0.6"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
bincode = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lib-error = {path = "../lib-error"}
lib-db = {path = "../lib-db"}
lib-goo = {path = "../lib-goo"}
lib-index = {path = "../lib-index"}
tera = "*"
