[package]
name = "lib-server"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"
build = "build.rs"

[features]
default = ["rust-tls"]
tls = ["native-tls", "actix-web/tls"]
rust-tls = ["rustls", "actix-web/rust-tls"]

[dependencies]
actix = { version="0.7"}
actix-web = { version = "0.7" }
bincode = "1.0"
bson = "0.13.0"
bytes = "0.4"
futures = "0.1"
inflections = "1.1"
log = "0.4"
native-tls = { version="0.2", optional = true }
serde = "1.0"
rustls = { version = "^0.14.0", optional = true }

serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
walkdir = "2"

lib-ai = {path = "../lib-ai"}
lib-error = {path = "../lib-error"}
lib-db = {path = "../lib-db"}
lib-goo = {path = "../lib-goo"}
lib-index = {path = "../lib-index"}
