[package]
name = "lib-tui"
version = "0.1.0"
description = "A library for terminal ui widgets on top of cursive."
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
# cursive = { git = "https://github.com/gyscos/Cursive", rev = "64d0a66b5e8", default-features = false }
cursive = "0.9"
regex = "1.0"
