[package]
name = "lib-tui"
version = "0.1.0"
description = "A library for terminal ui widgets on top of cursive."
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[dependencies]
cursive = {version = "0.9", features = ["termion-backend"]}
log = "0.4"
regex = "1.0"
termion = "1.5"
