[package]
name = "weaver-data"
documentation = "Cli utility to replay the files in the document repo in order to regenerate the text index."
version = "0.3.4"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver-data"
path = "src/main.rs"


[dependencies]
clap = "2.32"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"

log = "0.4"
env_logger = "0.5"

lib-index = {path="../lib-index"}
lib-db = {path="../lib-db"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}
