[package]
name = "weaver-db"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
diesel = { version = "1.2", features = ["sqlite"] }
diesel_migrations = { version = "1.2" }
chrono = "*"
log = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1.0"

weaver-error = {path="../weaver-error"}
lib-api = {path="../lib-api"}
