[package]
name = "weaver-hud"
documentation = "The weaver heads up display."
version = "0.3.7"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver-hud"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.30.0"
clipboard = "0.4"
crossbeam-channel = "0.2.1"
env_logger = "0.5"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
[target.'cfg(osx)'.dependencies]
web-view = "0.2"

lib-error = {path = "../lib-error"}
lib-goo = {path = "../lib-goo"}
lib-rpc = {path = "../lib-rpc"}
