[package]
name = "weaver-hud"
documentation = "The weaver heads up display."
version = "0.3.7"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[[bin]]
name = "weaver-hud"
path = "src/main.rs"

[features]
default = ["use-tether"]
use-tether = ["tether"]

[dependencies]
chrono = "0.4"
clap = "2.32"
clipboard = "0.4"
crossbeam-channel = "0.2.1"
env_logger = "0.5"
log = "0.4"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"

lib-error = {path = "../lib-error"}
lib-goo = {path = "../lib-goo"}
lib-rpc = {path = "../lib-rpc"}

[target.'cfg(target_os="macos")'.dependencies]
tether = { git = "https://github.com/winding-lines/tether.git", rev = "bba5015d2fc5512bdfbe9a35b394de6a7d369f34", optional = true }
