[package]
name = "weaver-index"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
error-chain = "0.11"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
rust_sodium = "~0.9.0"
keyring = "0.6.0"
metrohash = "1.0"
rpassword = "2.0"

weaver-db = {path="../weaver-db"}
weaver-error = {path="../weaver-error"}


[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
rev = "5bc9683801e3a3a7e298b65f196f2ffe10c8b1ed"
features = ["mmap"]