[package]
name = "weaver-rpc"
version = "0.1.0"
description = "Implement rpc between weaver client and server"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
reqwest = "0.8"
serde = "*"
serde_derive = "*"
serde_json = "*"
weaver-error = {path = "../weaver-error"}
weaver-db = {path = "../weaver-db"}
log = "*"

[build-dependencies]
protoc-grpcio = "0.1"

