[package]
name = "weaver-server"
documentation = "Start and host the weaver server"
version = "0.3.6"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[[bin]]
name = "weaver-server"
path = "src/main.rs"


[dependencies]
chrono = "0.4"
clap = "2.32"
daemonize = {git = "https://github.com/winding-lines/daemonize"}
env_logger = "0.5"
futures = "0.1"
hyper = "0.11"
log = "0.4"
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

lib-ai = {path = "../lib-ai"}
lib-db = {path="../lib-db"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}
lib-index = {path="../lib-index"}
lib-server = {path="../lib-server"}
