[package]
name = "weaver-web"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]

[dependencies]
actix-web = "0.6"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
weaver-error = {path = "../weaver-error"}
weaver-db = {path = "../weaver-db"}
weaver-index = {path = "../weaver-index"}
tera = "*"
