[package]
name = "weaver"
documentation = "The weaver shell prompt."
version = "0.3.4"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
clap = "2.30.0"
termion = "1.5"
clipboard = "0.4"
chan = "0.1.21"

chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"

log = "0.4"
env_logger = "0.5"


lib-goo = {path = "../lib-goo"}
lib-rpc = {path = "../lib-rpc"}
lib-error = {path = "../lib-error"}


[dependencies.cursive]
git = "https://github.com/gyscos/Cursive"
# rev = "a4111acccea"
rev = "4c70b7966397464cd0a6e93723b4edbfb"
# version = "0.9"

[dependencies.cursive_table_view]
git = "https://github.com/winding-lines/cursive_table_view"
# rev = "9be01c5"
rev = "1cca660435b832383a49545853ecaeda5bea549b"
# default-features = false
# features = ["blt-backend"]