[package]
name = "weaver"
documentation = "The weaver shell prompt."
version = "0.3.6"
authors = ["Marius Seritan <git@winding-lines.com>"]

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
clap = "2.30.0"
termion = "1.5"
clipboard = "0.4"
# chan = "0.1.21"
crossbeam-channel = "0.2.1"

chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"
regex = "1.0"

log = "0.4"
env_logger = "0.5"

lib-error = {path = "../lib-error"}
lib-goo = {path = "../lib-goo"}
lib-rpc = {path = "../lib-rpc"}
lib-tui = {path = "../lib-tui"}

[dependencies.cursive]
git = "https://github.com/gyscos/Cursive"
# rev = "4c70b7966397464cd0a6e93723b4edbfb"
rev = "64d0a66b5e8"