[package]
name = "weaver"
documentation = "The weaver shell prompt."
version = "0.3.7"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2.32"
clipboard = "0.4"
crossbeam-channel = "0.2.1"
cursive = {version = "0.9", features = ["termion-backend"]}
env_logger = "0.5"
log = "0.4"
regex = "1.0"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
termion = "1.5"
walkdir = "2"

lib-error = {path = "../lib-error"}
lib-goo = {path = "../lib-goo"}
lib-rpc = {path = "../lib-rpc"}
lib-tui = {path = "../lib-tui"}
