[package]
name = "weaver-python"
documentation = "Weaver python extension"
version = "0.3.5"
authors = ["Marius Seritan <git@winding-lines.com>"]

[lib]
name = "weaver2py"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.2"
features = ["extension-module"]

[dependencies]
bincode = "1.0"
chrono = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# Note that we depend on the workspace but we are not part of it.
# Instead use setup.py to support the ecosystem expectation and special linker builds.
# Once this is open sourced and published to
lib-index = {path="../lib-index"}
lib-error = {path="../lib-error"}
lib-goo = {path="../lib-goo"}
